--- a/index.html
+++ b/index.html
@@ -3,10 +3,105 @@
     <head>
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <script src="https://kit.fontawesome.com/16c7ddff84.js" crossorigin="anonymous"></script>
 	    <link rel="stylesheet" href="public/main.css" />
         <title>Oh My Food</title>
 	    <meta name="description" content="Reservez le menu qui vous convient" />
     </head>
     <body>
+        <header>
+            <div id="logo">
+                <img src="images/logo/ohmyfood@2x.svg" alt="logo" />    
+            </div>
+        </header>
+            <main>
+                <div class=form>
+                    <form method="post" action="#">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <input class="champ" type="text" name="localisation" value="Paris, Belleville"/>
+                    </form>
+                </div>
+                <div class="description">
+                    <h1>Réservez le menu qui vous convient</h1>
+                    <p>Découvrez des restaurants d'exceptions, séléctionnés par nos soins.</p>
+                    <a href="#restaurants" class="button">Explorez nos restaurants</a>
+                </div>
+                <div class="fonctionnement">
+                    <h2>Fonctionnement</h2>
+                    <div class="fonctionnement__description">
+                        <p class="number">1</p>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="fonctionnement__description">
+                        <p class="number">2</p>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p>Composez votre menu</p>
+                    </div>
+                    <div class="fontionnement__description">
+                        <p class="number">3</p>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p>Dégustez au restaurant</p>
+                    </div>
+                </div>
+                <section id="restaurants">
+                    <h2>Restaurants</h2>
+                    <div class="restaurants">
+                        <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
+                            alt="Photo la pallette du goût" />
+                            <div class="restaurants__descrition">
+                                <div class="restaurants__description__texte">
+                                    <h3>La pallette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </a>
+                        <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
+                            alt="Photo la note enchantée" />
+                            <div class="restaurants__descrition">
+                                <div class="restaurants__description__texte">
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </a>
+                        <a href="pages/a-la-francaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
+                            alt="Photo à la française" />
+                            <div class="restaurants__descrition">
+                                <div class="restaurants__description__texte">
+                                    <h3>À la française</h3>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </a>
+                        <a href="pages/le-delice-des-sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
+                            alt="Photo Le délice des sens" />
+                            <div class="restaurants__descrition">
+                                <div class="restaurants__description__texte">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <footer>
+                    <div class="logo">
+                        <img src="images/logo/ohmyfood@2x.svg" alt="logo" />    
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                            <li><a href="#">Mentions légales</a></li>
+                            <li><a href = "mailto: abc@example.com">Contact</a></li>
+                        </ul>
+                    </nav>
+                </footer>
+            </main>
     </body>
 </html>
