--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -4,9 +4,12 @@
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="https://kit.fontawesome.com/16c7ddff84.js" crossorigin="anonymous"></script>
-	    <link rel="stylesheet" href="public/main.css" />
+	    <link rel="stylesheet" href="../public/css/main.css" />
         <title>Oh My Food - La pallette du goût</title>
 	    <meta name="description" content="La pallette du goût" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -14,7 +17,7 @@
                 <i class="fas fa-arrow-left"></i>
             </a>
             <div id="logo_header">
-                <img src="../images/logo/ohmyfood@2x.svg" alt="logo" />    
+                <img src="../images/logo/ohmyfood@2x.svg" alt="logo oh my food" />    
             </div>
         </header>
         <main>
