--- a/index.html
+++ b/index.html
@@ -55,49 +55,49 @@
             <div class="restaurants">
                 <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
                     alt="Photo la pallette du goût" />
-                    <div class="restaurants__descrition">
+                    <div class="restaurants__description">
                         <div class="restaurants__description__texte">
                             <h3>La pallette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </a>
                 <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
                     alt="Photo la note enchantée" />
-                    <div class="restaurants__descrition">
+                    <div class="restaurants__description">
                         <div class="restaurants__description__texte">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </a>
                 <a href="pages/a-la-francaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
                     alt="Photo à la française" />
-                    <div class="restaurants__descrition">
+                    <div class="restaurants__description">
                         <div class="restaurants__description__texte">
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </a>
                 <a href="pages/le-delice-des-sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
                     alt="Photo Le délice des sens" />
-                    <div class="restaurants__descrition">
+                    <div class="restaurants__description">
                         <div class="restaurants__description__texte">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </a>
             </div>
         </section>
         <footer>
             <div id="logo_footer">
-                <img src="images/logo/ohmyfood@2x.svg" alt="logo" />    
+                <h3>ohmyfood</h3>    
             </div>
             <nav>
                 <ul>
