--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -122,7 +122,7 @@
             </section>
             <footer>
                 <div id="logo_footer">
-                    <img src="../images/logo/ohmyfood@2x.svg" alt="logo" />    
+                    <h3>ohmyfood</h3>    
                 </div>
                 <nav>
                     <ul>
