Correction of html and adding css
Correction of the html structure for a restaurant page. All css for restaurant page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="https://kit.fontawesome.com/16c7ddff84.js" crossorigin="anonymous"></script>
-	    <link rel="stylesheet" href="public/css/main.css" />
+	    <link rel="stylesheet" href="public/css/index.css" />
         <title>Oh My Food</title>
 	    <meta name="description" content="Reservez le menu qui vous convient" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
