--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="https://kit.fontawesome.com/16c7ddff84.js" crossorigin="anonymous"></script>
-	    <link rel="stylesheet" href="../public/css/main.css" />
+	    <link rel="stylesheet" href="../public/css/restaurant.css" />
         <title>Oh My Food - La pallette du goût</title>
 	    <meta name="description" content="La pallette du goût" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,14 +25,17 @@
             alt="Photo la pallette du goût" />
             <section class="menu">
                 <div class="name">
-                    <h2>La pallette du goût</h2>
+                    <h1>La pallette du goût</h1>
                     <i class="far fa-heart"></i>
                 </div>
                 <div class="menu__container">
-                    <h3>Entrées</h3>
+                    <div class="title">
+                        <h2>Entrées</h2>
+                        <div class="underline"></div>
+                    </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Fricassée d'escargot</h4>
+                            <h3>Fricassée d'escargot</h3>
                             <p>Au piment d'Espelette</p>
                         </div>
                         <div class="block__price">
@@ -41,7 +44,7 @@
                     </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Foie gras de canard mi-cuit</h4>
+                            <h3>Foie gras de canard mi-cuit</h3>
                             <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="block__price">
@@ -50,7 +53,7 @@
                     </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Oeuf au plat</h4>
+                            <h3>Oeuf au plat</h3>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="block__price">
@@ -59,10 +62,13 @@
                     </div>
                 </div>
                 <div class="menu__container">
-                    <h3>Plats</h3>
+                    <div class="title">
+                        <h2>Plats</h2>
+                        <div class="underline"></div>
+                    </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Filet de boeuf aux herbes</h4>
+                            <h3>Filet de boeuf aux herbes</h3>
                             <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="block__price">
@@ -71,7 +77,7 @@
                     </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Parmentier de queue de boeuf</h4>
+                            <h3>Parmentier de queue de boeuf</h3>
                             <p>À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="block__price">
@@ -80,7 +86,7 @@
                     </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Filet de turbot</h4>
+                            <h3>Filet de turbot</h3>
                             <p>Aux agrumes</p>
                         </div>
                         <div class="block__price">
@@ -89,10 +95,13 @@
                     </div>
                 </div>
                 <div class="menu__container">
-                    <h3>Desserts</h3>
+                    <div class="title">
+                        <h2>Dessert</h2>
+                        <div class="underline"></div>
+                    </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Paris-Brest</h4>
+                            <h3>Paris-Brest</h3>
                             <p>Revisité</p>
                         </div>
                         <div class="block__price">
@@ -101,7 +110,7 @@
                     </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Macaron au chocolat d'exception </h4>
+                            <h3>Macaron au chocolat d'exception </h3>
                             <p>Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="block__price">
@@ -110,7 +119,7 @@
                     </div>
                     <div  class="block">
                         <div class="block__menu_description">
-                            <h4>Mousse au chocolat</h4>
+                            <h3>Mousse au chocolat</h3>
                             <p>Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="block__price">
@@ -118,7 +127,9 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="button">Commander</a>
+                <div class="button">
+                    <a href="#">Commander</a>
+                </div>
             </section>
             <footer>
                 <div id="logo_footer">
