--- a/index.html
+++ b/index.html
@@ -33,66 +33,70 @@
             </div>
             <div class="fonctionnement">
                 <h2>Fonctionnement</h2>
-                <div class="fonctionnement__description">
-                    <p class="number">1</p>
-                    <i class="fas fa-mobile-alt"></i>
-                    <p>Choisissez un restaurant</p>
-                </div>
-                <div class="fonctionnement__description">
-                    <p class="number">2</p>
-                    <i class="fas fa-list-ul"></i>
-                    <p>Composez votre menu</p>
-                </div>
-                <div class="fonctionnement__description--violet">
-                    <p class="number">3</p>
-                    <i class="fas fa-store"></i>
-                    <p>Dégustez au restaurant</p>
+                <div class="fonctionnement__container">
+                    <div class="fonctionnement__container__description">
+                        <p class="number">1</p>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="fonctionnement__container__description">
+                        <p class="number">2</p>
+                        <i class="fas fa-list-ul"></i>
+                        <p>Composez votre menu</p>
+                    </div>
+                    <div class="fonctionnement__container__description--violet">
+                        <p class="number">3</p>
+                        <i class="fas fa-store"></i>
+                        <p>Dégustez au restaurant</p>
+                    </div>
                 </div>
             </div>
         </main>
         <section id="restaurants">
             <h2>Restaurants</h2>
-            <div class="restaurants">
-                <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
-                    alt="Photo la pallette du goût" />
-                    <div class="restaurants__description">
-                        <div class="restaurants__description__texte">
-                            <h3>La pallette du goût</h3>
-                            <p>Ménilmontant</p>
+            <div class="restaurants__container">
+                <div class="restaurants">
+                    <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
+                        alt="Photo la pallette du goût" />
+                        <div class="restaurants__description">
+                            <div class="restaurants__description__texte">
+                                <h3>La pallette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <i class="far fa-heart"></i>
                         </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
-                <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
-                    alt="Photo la note enchantée" />
-                    <div class="restaurants__description">
-                        <div class="restaurants__description__texte">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
+                    </a>
+                    <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
+                        alt="Photo la note enchantée" />
+                        <div class="restaurants__description">
+                            <div class="restaurants__description__texte">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                            <i class="far fa-heart"></i>
                         </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
-                <a href="pages/a-la-francaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
-                    alt="Photo à la française" />
-                    <div class="restaurants__description">
-                        <div class="restaurants__description__texte">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
+                    </a>
+                    <a href="pages/a-la-francaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
+                        alt="Photo à la française" />
+                        <div class="restaurants__description">
+                            <div class="restaurants__description__texte">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <i class="far fa-heart"></i>
                         </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
-                <a href="pages/le-delice-des-sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
-                    alt="Photo Le délice des sens" />
-                    <div class="restaurants__description">
-                        <div class="restaurants__description__texte">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
+                    </a>
+                    <a href="pages/le-delice-des-sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
+                        alt="Photo Le délice des sens" />
+                        <div class="restaurants__description">
+                            <div class="restaurants__description__texte">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <i class="far fa-heart"></i>
                         </div>
-                        <i class="far fa-heart"></i>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </section>
         <footer>
@@ -104,7 +108,7 @@
                     <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                     <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
-                    <li><a href = "mailto: abc@example.com">Contact</a></li>
+                    <li><a href="mailto:abc@example.com">Contact</a></li>
                 </ul>
             </nav>
         </footer>
