Add opengraph and css pc
added opengraph in head. All the css for pc version

--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -10,6 +10,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+        <meta property="og:url" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/pages/la-pallette-du-gout.html" />
+        <meta property="og:title" content="Oh My Food" />
+        <meta property="og:description" content="Menu du restaurant La palette du goût" />
+        <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" />
     </head>
     <body>
         <header>
@@ -18,6 +22,8 @@
             </a>
             <div id="logo_header">
                 <img src="../images/logo/ohmyfood@2x.svg" alt="logo oh my food" />    
+            </div>
+            <div class="empty">
             </div>
         </header>
         <main>
