--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
+        <meta property="og:url" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/" />
+        <meta property="og:title" content="Oh My Food" />
+        <meta property="og:description" content="Réservez le menu qui vous convient" />
+        <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/logo/ohmyfood@2x.svg" />
     </head>
     <body>
         <header>
@@ -58,6 +62,7 @@
                 <div class="restaurants">
                     <a href="pages/la-pallette-du-gout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
                         alt="Photo la pallette du goût" />
+                        <div class="new_topright">Nouveau</div>
                         <div class="restaurants__description">
                             <div class="restaurants__description__texte">
                                 <h3>La pallette du goût</h3>
@@ -68,6 +73,7 @@
                     </a>
                     <a href="pages/la-note-enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
                         alt="Photo la note enchantée" />
+                        <div class="new_topright">Nouveau</div>
                         <div class="restaurants__description">
                             <div class="restaurants__description__texte">
                                 <h3>La note enchantée</h3>
