--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -74,7 +74,7 @@
                         <h2>Plats</h2>
                         <div class="underline"></div>
                     </div>
-                    <div class="container_animation">
+                    <div class="container_animation2">
                         <div class="block">
                             <div class="block__menu_description">
                                 <h3>Filet de boeuf aux herbes</h3>
@@ -109,7 +109,7 @@
                         <h2>Dessert</h2>
                         <div class="underline"></div>
                     </div>
-                    <div class="container_animation">
+                    <div class="container_animation3">
                         <div class="block">
                             <div class="block__menu_description">
                                 <h3>Paris-Brest</h3>
