creation of loader
adding html for loader, and creation of two different keyframes and animation for the loader

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <meta property="og:img" content="https://tiagocarvalhomartins.github.io/TiagoCARVALHOMARTINS_3_10092021/images/logo/ohmyfood@2x.svg" />
     </head>
     <body>
+        <div class="loader">
+            <p>Chargement</p>
+            <div class="progress">
+                <div class="progress__bar"></div>
+            </div>
+        </div>
         <header>
             <div id="logo_header">
                 <img src="images/logo/ohmyfood@2x.svg" alt="logo oh my food" />    
