Creation of checkbox
creation of the checkbox in html and scss

--- a/pages/la-pallette-du-gout.html
+++ b/pages/la-pallette-du-gout.html
@@ -32,7 +32,10 @@
             <section class="menu">
                 <div class="name">
                     <h1>La pallette du goût</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </div>
                 </div>
                 <div class="menu__container">
                     <div class="title">
@@ -48,6 +51,11 @@
                             <div class="block__price">
                                 <p>25€</p>
                             </div>
+                            <div class="checkbox">
+                                <div class="checkbox__icon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
+                            </div>
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
@@ -57,6 +65,9 @@
                             <div class="block__price">
                                 <p>35€</p>
                             </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
@@ -65,6 +76,9 @@
                             </div>
                             <div class="block__price">
                                 <p>20€</p>
+                            </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -83,6 +97,9 @@
                             <div class="block__price">
                                 <p>40€</p>
                             </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
@@ -92,6 +109,9 @@
                             <div class="block__price">
                                 <p>35€</p>
                             </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
@@ -100,6 +120,9 @@
                             </div>
                             <div class="block__price">
                                 <p>44€</p>
+                            </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
@@ -118,6 +141,9 @@
                             <div class="block__price">
                                 <p>18€</p>
                             </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
@@ -127,6 +153,9 @@
                             <div class="block__price">
                                 <p>22€</p>
                             </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                         <div class="block">
                             <div class="block__menu_description">
@@ -135,6 +164,9 @@
                             </div>
                             <div class="block__price">
                                 <p>23€</p>
+                            </div>
+                            <div class="checkbox">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                     </div>
